...
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settingsRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- ヘッダー -->
        <LinearLayout
...
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="2dp" />

        <!-- バックアップ作成 -->
        <LinearLayout
            android:id="@+id/rowBackupCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackground"
            android:padding="20dp">

...
            android:paddingStart="84dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="2dp" />

        <LinearLayout
            android:id="@+id/rowHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackground"
            android:padding="20dp">

...
