...
            app:backgroundTint="@color/colorPrimary"
            app:srcCompat="@android:drawable/ic_input_add" />

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#111111"
        android:elevation="8dp"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/bottom_nav_selector"
...
