...

    <Space
        android:layout_width="10dp"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/chipBefore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_before_duty"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/chipAfter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_after_duty"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingStart="14dp"
...
